test/errors/decimal_invalid_literal_fail.hy
// EXPECT_DIAGNOSTIC: Invalid exponent in floating-point literal '1e+'
// EXPECT_DIAGNOSTIC: Expected expression after '='
decimal bad = 1e+
